--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
   name: Tim Rehm
   markdown: kramdown
-  permalink: /blog/:2020/:12/:2/:tim-rehm-site-launched
+  permalink: /blog/2020/12/2/:tim-rehm-site-launched
